<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/hundred_dp"
            android:background="@drawable/header_gradient" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_sixteen"
            android:layout_marginTop="@dimen/margin_negative_eighty"
            android:layout_marginBottom="@dimen/margin_sixty_four"
            android:background="@drawable/header_label"
            android:padding="@dimen/margin_eighth"
            android:text="@string/calculator_text"
            android:textColor="@color/orange_one"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hundred_dp"
            android:layout_margin="@dimen/margin_sixteen"
            android:background="@drawable/text_border"
            android:gravity="right"
            android:paddingTop="@dimen/padding_twenty_four"
            android:paddingRight="@dimen/padding_ten"
            android:textSize="36sp"
            tools:hint="@string/edit_text_hint"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_three_hundred_thirty"
            android:layout_marginTop="@dimen/margin_negative_ten"
            android:background="@color/clear_background"
            android:onClick="operationFunction"
            android:paddingBottom="@dimen/margin_sixteen"
            android:text="@string/button_clear"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/margin_thirtytwo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_seven"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_seven" />

            <Button
                android:id="@+id/button_eight"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_eight" />

            <Button
                android:id="@+id/button_nine"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_nine" />

            <Button
                android:id="@+id/button_divide"
                style="@style/button_operation"
                android:onClick="operationFunction"
                android:text="@string/button_divide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_four"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_four" />

            <Button
                android:id="@+id/button_five"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_five" />

            <Button
                android:id="@+id/button_six"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_six" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/button_operation"
                android:onClick="operationFunction"
                android:text="@string/button_multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_one"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_one" />

            <Button
                android:id="@+id/button_two"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_two" />

            <Button
                android:id="@+id/button_three"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_three" />

            <Button
                android:id="@+id/button_minus"
                style="@style/button_operation"
                android:onClick="operationFunction"
                android:text="@string/button_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_zero"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_zero" />

            <Button
                android:id="@+id/button_dot"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_dot" />

            <Button
                android:id="@+id/button_equal"
                style="@style/button_equal"
                android:onClick="operationFunction"
                android:text="@string/button_equal" />

            <Button
                android:id="@+id/button_plus"
                style="@style/button_operation"
                android:onClick="operationFunction"
                android:text="@string/button_plus" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>

